# clex

./: CMakeLists.txt
include/: student.h
lib/: .#student.c  student.c
src/: main.c
